--- a/views/layouts/splashButtons.gohtml
+++ b/views/layouts/splashButtons.gohtml
@@ -1,6 +1,6 @@
 {{define "splashButtons"}}
     {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary" | arg "Href" .URL}}
     <a class="button is-medium is-dark is-outlined" href="#features" aria-label="Learn more about Discover Now and its features">
-        Learn more
+        Features
     </a>
 {{end}}
