--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -3,7 +3,8 @@
   border-radius: 14px;
   margin-top: 2rem;
   padding: 1rem .5rem 2rem;
-  border-left: 4px solid hsl(160, 23%, 82%);
+  border-top: 4px solid $lightgreen;
+  border-bottom: 4px solid $lightgreen;
 
   &__copy {
     line-height: 1.7em;
