--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -5298,7 +5298,8 @@ th {
   border-radius: 14px;
   margin-top: 2rem;
   padding: 1rem 0.5rem 2rem;
-  border-left: 4px solid #c7dcd5;
+  border-top: 4px solid #cbf1df;
+  border-bottom: 4px solid #cbf1df;
 }
 .card__copy {
   line-height: 1.7em;
