Show disabled button when a valid authentication URL cannot be fetched

--- a/sass/settings/init.scss
+++ b/sass/settings/init.scss
@@ -90,6 +90,11 @@ $footer-padding: 3rem 1.5rem;
   padding-bottom: 1rem !important;
 }
 
+.is-disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 // Focus accessibility
 
 .focus--keyboard {
