--- a/views/layouts/cta.gohtml
+++ b/views/layouts/cta.gohtml
@@ -5,7 +5,11 @@
                 <h2 class="title is-size-2 is-family-secondary">
                     It's time to discover.
                 </h2>
-                {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary is-rounded" | arg "Href" .URL}}
+                {{if .URL}}
+                    {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary is-rounded" | arg "Href" .URL}}
+                {{else}}
+                    {{template "button" . | arg "Text" "Offline" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-disabled is-medium is-primary is-rounded is-disabled" | arg "Href" "#"}}
+                {{end}}
             </div>
         </div>
     </section>
