Reorganize results pages with semantic markup

--- a/views/layouts/resultTip.gohtml
+++ b/views/layouts/resultTip.gohtml
@@ -1,5 +1,5 @@
 {{define "resultTip"}}
-    <h4 class="is-spaced is-size-5 has-text-weight-medium">
+    <p class="is-spaced is-size-5 has-text-weight-medium">
         <span class="has-text-weight-semibold">Tip: </span> {{.}}
-    </h4>
+    </p>
 {{end}}
