--- a/views/layouts/splash.gohtml
+++ b/views/layouts/splash.gohtml
@@ -4,11 +4,15 @@
             <div class="container">
                 {{template "splashSubheader" "Don't wait for Monday."}}
                 {{template "splashHeader" "Discover Now"}}
-                <div class="buttons is-hidden-mobile">
-                    {{template "splashButtons" .}}
-                </div>
-                <div class="buttons is-centered is-hidden-tablet">
-                    {{template "splashButtons" .}}
+                <div class="has-text-centered-mobile">
+                    {{if .URL}}
+                        {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary" | arg "Href" .URL}}
+                    {{else}}
+                        {{template "button" . | arg "Text" "Offline" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary is-disabled" | arg "Href" "#"}}
+                    {{end}}
+                    <a class="button is-medium is-dark is-outlined" href="#features" aria-label="Learn more about Discover Now and its features">
+                        Features
+                    </a>
                 </div>
             </div>
         </div>
