--- a/views/layouts/footerCopy.gohtml
+++ b/views/layouts/footerCopy.gohtml
@@ -1,8 +1,5 @@
 {{define "footerCopy"}}
-    <p class="footer__copy is-size-6 has-text-left has-text-primary is-hidden-mobile">
-        {{.}}
-    </p>
-    <p class="is-size-6 has-text-centered has-text-primary is-hidden-tablet">
+    <p class="footer__copy is-size-6 has-text-primary">
         {{.}}
     </p>
 {{end}}
