--- a/sass/components/footer.scss
+++ b/sass/components/footer.scss
@@ -1,3 +1,5 @@
+@import "../bulma/utilities/mixins.sass";
+
 .footer {
   &__header {
     padding-bottom: 0.75rem;
@@ -7,8 +9,10 @@
     padding: 0.5rem 0;
   }
 
-  &__copy {
-    padding-right: 2rem;
+  @include desktop {
+    &__copy {
+      padding-right: 2rem;
+    }
   }
 
   &__link {
