--- a/views/layouts/footerHeader.gohtml
+++ b/views/layouts/footerHeader.gohtml
@@ -1,11 +1,6 @@
 {{define "footerHeader"}}
-    <h2 class="footer__header has-text-left">
-        <a class="title has-text-weight-bold has-text-primary is-family-code is-hidden-mobile" href="http://127.0.0.1:3000/">
-            {{.}}
-        </a>
-    </h2>
-    <h2 class="footer__header has-text-centered">
-        <a class="title has-text-weight-bold has-text-primary is-family-code is-hidden-tablet" href="http://127.0.0.1:3000/">
+    <h2 class="footer__header">
+        <a class="title has-text-weight-bold has-text-primary is-family-code" href="http://127.0.0.1:3000/">
             {{.}}
         </a>
     </h2>
