--- a/views/layouts/footer.gohtml
+++ b/views/layouts/footer.gohtml
@@ -3,8 +3,14 @@
         <div class="container">
             <div class="columns">
                 <div class="column">
-                    {{template "footerHeader" "Discover Now"}}
-                    {{template "footerCopy" "Discover Now is a Spotify playlist generator that learns from a user's recent musical interests. This project is not endorsed by Spotify."}}
+                    <h2 class="footer__header">
+                        <a class="title has-text-weight-bold has-text-primary is-family-code" href="http://127.0.0.1:3000/">
+                            Discover Now
+                        </a>
+                    </h2>
+                    <p class="footer__copy is-size-6 has-text-primary">
+                        Discover Now is a Spotify playlist generator that learns from a user's recent musical interests. This project is not endorsed by Spotify.
+                    </p>
                 </div>
                 <div class="column">
                     {{template "footerTitle" "Project"}}
