--- a/sass/components/splash.scss
+++ b/sass/components/splash.scss
@@ -1,20 +1,27 @@
+@import "../bulma/utilities/mixins.sass";
+
 .splash {
-  background-image: linear-gradient(rgba(0,0,0,0.1), rgb(0,0,0,0.1)), url(/static/images/cassette.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0, 0.1)), url(/static/images/cassette.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  &__header_mobile {
-    font-size: 4.5rem;
-    margin-bottom: 4rem !important;
+  &__header {
+    @include tablet {
+      font-size: 6rem;
+      padding-bottom: 1rem;
+    }
+
+    @include mobile {
+      font-size: 4.5rem;
+      margin-bottom: 4rem !important;
+    }
   }
 
-  &__subheader_desktop {
-    margin-top: -17rem;
-    margin-bottom: -1.25rem;
-  }
-
-  &__subheader_mobile {
-    margin-bottom: -1.25rem;
+  &__subheader {
+    @include tablet {
+      margin-top: -17rem;
+      margin-bottom: -1.25rem;
+    }
   }
 }
