--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -1,6 +1,6 @@
 {{define "features"}}
     <section class="features section is-large" id="features">
-        <div class="container">
+        <div class="container has-text-left-tablet has-text-centered-mobile">
             {{template "sectionTitle" "Why should you Discover Now?"}}
             {{template "sectionSubtitle" "Sometimes you just want something new. We'll help you find it."}}
             <div class="columns">
