--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -1,6 +1,6 @@
 {{define "procedure"}}
     <section class="procedure section is-large">
-        <div class="container">
+        <div class="container has-text-left-tablet has-text-centered-mobile">
             {{template "sectionTitle" "How does it work?"}}
             {{template "sectionSubtitle" "You connect. A computer somewhere does some math. You discover."}}
             <div class="columns">
