--- a/views/layouts/sectionTitle.gohtml
+++ b/views/layouts/sectionTitle.gohtml
@@ -1,8 +1,5 @@
 {{define "sectionTitle"}}
-    <h2 class="section__title title is-size-2 is-family-secondary is-hidden-mobile">
-        {{.}}
-    </h2>
-    <h2 class="section__title title is-size-2 has-text-centered is-marginless is-family-secondary is-hidden-tablet">
+    <h2 class="section__title title is-size-2 is-family-secondary">
         {{.}}
     </h2>
 {{end}}
