--- a/views/layouts/splash.gohtml
+++ b/views/layouts/splash.gohtml
@@ -9,9 +9,9 @@
                     Discover Now
                 </h1>
                 {{if .URL}}
-                    {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary" | arg "Href" .URL}}
+                    {{template "spotifyButton" . | arg "Text" "Connect" | arg "Class" "is-medium is-primary" | arg "Href" .URL}}
                 {{else}}
-                    {{template "button" . | arg "Text" "Offline" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary is-disabled" | arg "Href" "#"}}
+                    {{template "spotifyButton" . | arg "Text" "Offline" | arg "Class" "is-medium is-primary is-disabled" | arg "Href" "#"}}
                 {{end}}
                 <a class="button is-medium is-dark is-outlined" href="#features" aria-label="Learn more about Discover Now and its features">
                     Features
