--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -25,6 +25,7 @@
 @import "../components/splash";
 @import "../components/procedure";
 @import "../components/footer";
+@import "../components/results";
 @import "../components/anchor";
 @import "../components/button";
 @import "../components/card";
