--- a/views/layouts/cardCopy.gohtml
+++ b/views/layouts/cardCopy.gohtml
@@ -1,5 +1,5 @@
 {{define "cardCopy"}}
-    <p class="card__copy is-size-6">
+    <p class="card__copy is-size-6 has-text-left">
         {{.}}
     </p>
 {{end}}
