--- a/views/layouts/footer.gohtml
+++ b/views/layouts/footer.gohtml
@@ -4,11 +4,11 @@
             <div class="columns">
                 <div class="column">
                     <h2 class="footer__header">
-                        <a class="title has-text-weight-bold has-text-primary is-family-code" href="http://127.0.0.1:3000/">
+                        <a class="title is-family-code has-text-weight-bold has-text-primary" href="http://127.0.0.1:3000/">
                             Discover Now
                         </a>
                     </h2>
-                    <p class="footer__copy is-size-6 has-text-primary">
+                    <p class="footer__copy has-text-primary is-size-6">
                         Discover Now is a Spotify playlist generator that learns from a user's recent musical interests. This project is not endorsed by Spotify.
                     </p>
                 </div>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <small class="has-text-primary">
-                Made with <span class="has-text-pink"><i class="fas fa-heart"></i></span> by Henry Sarabia
+                Made with <span class="icon is-small has-text-pink" aria-label="love"><i class="fas fa-heart"></i></span> by Henry Sarabia
             </small>
         </div>
     </footer>
