--- a/views/layouts/footerLink.gohtml
+++ b/views/layouts/footerLink.gohtml
@@ -1,7 +1,7 @@
 {{define "footerLink"}}
     {{if $args := . | require "Text" "string" | require "Href" "string" | args}}
         <li>
-            <a class="footer__link is-size-6 has-text-celadon is-block" href="{{$args.Href}}">
+            <a class="footer__link has-text-celadon is-size-6 is-block" href="{{$args.Href}}">
                 {{$args.Text}}
             </a>
         </li>
