--- a/views/layouts/sectionSubtitle.gohtml
+++ b/views/layouts/sectionSubtitle.gohtml
@@ -1,5 +1,5 @@
 {{define "sectionSubtitle"}}
-    <p class="section__subtitle subtitle has-text-grey is-family-secondary">
+    <p class="section__subtitle subtitle is-family-secondary">
         {{.}}
     </p>
 {{end}}
