--- a/views/layouts/cta.gohtml
+++ b/views/layouts/cta.gohtml
@@ -2,7 +2,7 @@
     <section class="hero is-small is-success">
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h2 class="title is-size-2 is-family-secondary">
+                <h2 class="title is-family-secondary is-size-2">
                     It's time to discover.
                 </h2>
                 {{if .URL}}
