--- a/views/layouts/footerTitle.gohtml
+++ b/views/layouts/footerTitle.gohtml
@@ -1,5 +1,5 @@
 {{define "footerTitle"}}
-    <h2 class="footer__title is-size-5 has-text-weight-medium has-text-primary is-family-secondary">
+    <h2 class="footer__title is-family-secondary has-text-weight-medium has-text-primary is-size-5">
         {{.}}
     </h2>
 {{end}}
