--- a/views/layouts/resultSubheader.gohtml
+++ b/views/layouts/resultSubheader.gohtml
@@ -1,5 +1,5 @@
 {{define "resultSubheader"}}
-    <p class="is-size-3-tablet is-size-4-mobile is-spaced has-text-grey-dark is-family-secondary">
+    <p class="is-family-secondary has-text-grey-dark is-size-3-tablet is-size-4-mobile is-spaced">
         {{.}}
     </p>
 {{end}}
