--- a/views/layouts/sectionTitle.gohtml
+++ b/views/layouts/sectionTitle.gohtml
@@ -1,5 +1,5 @@
 {{define "sectionTitle"}}
-    <h2 class="section__title title is-size-2 is-family-secondary">
+    <h2 class="section__title title is-family-secondary is-size-2">
         {{.}}
     </h2>
 {{end}}
