--- a/views/layouts/splash.gohtml
+++ b/views/layouts/splash.gohtml
@@ -2,7 +2,7 @@
     <header class="splash hero is-fullheight">
         <div class="hero-body">
             <div class="container has-text-left-tablet has-text-centered-mobile">
-                <p class="splash__subheader is-size-3-tablet is-size-4-mobile is-family-secondary has-text-grey-dark has-text-weight-medium">
+                <p class="splash__subheader is-family-secondary has-text-weight-medium has-text-grey-dark is-size-3-tablet is-size-4-mobile">
                     Don't wait for Monday.
                 </p>
                 <h1 class="splash__header title is-family-code has-text-weight-bold">
