Remove unused code and rename badly named files

--- a/sass/bulma/elements/notification.sass
+++ b/sass/bulma/elements/notification.sass
@@ -24,7 +24,7 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     top: 0.5rem
   .title,
   .subtitle,
-  .content
+  .background
     color: currentColor
   // Colors
   @each $name, $pair in $colors
