--- a/sass/components/result.scss
+++ b/sass/components/result.scss
@@ -1,6 +1,6 @@
 @import "../bulma/utilities/mixins.sass";
 
-.results {
+.result {
   @include mobile {
     margin-top: 4rem;
     margin-bottom: 2rem;
