--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -1,5 +1,5 @@
 {{define "procedure"}}
-    <section class="procedure section is-large">
+    <section class="section gradient is-large">
         <div class="container has-text-left-tablet has-text-centered-mobile">
             {{template "sectionTitle" "How does it work?"}}
             {{template "sectionSubtitle" "You connect. A computer somewhere does some math. You discover."}}
