--- a/sass/bulma/elements/content.sass
+++ b/sass/bulma/elements/content.sass
@@ -17,7 +17,7 @@ $content-table-head-cell-color: $text-strong !default
 $content-table-foot-cell-border-width: 2px 0 0 !default
 $content-table-foot-cell-color: $text-strong !default
 
-.content
+.background
   @extend %block
   // Inline
   li + li
