--- a/sass/components/background.scss
+++ b/sass/components/background.scss
@@ -1,3 +1,10 @@
-.procedure {
+.background {
+  background-image: url(/static/images/green.svg), linear-gradient(to right, hsl(0, 0%, 96%), hsl(0, 0%, 96%));
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.gradient {
   background: linear-gradient(45deg, hsl(0, 0%, 100%) 0%, hsla(0, 0%, 100%, 0.738) 19%, hsla(0, 0%, 100%, 0.541) 34%, hsla(0, 0%, 100%, 0.382) 47%, hsla(0, 0%, 100%, 0.278) 56.5%, hsla(0, 0%, 100%, 0.194) 65%, hsla(0, 0%, 100%, 0.126) 73%, hsla(0, 0%, 100%, 0.075) 80.2%, hsla(0, 0%, 100%, 0.042) 86.1%, hsla(0, 0%, 100%, 0.021) 91%, hsla(0, 0%, 100%, 0.008) 95.2%, hsla(0, 0%, 100%, 0.002) 98.2%, hsla(0, 0%, 100%, 0) 100%);
 }
