--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -22,13 +22,11 @@
 
 // Import custom stylesheets
 
-@import "../components/splash";
-@import "../components/procedure";
-@import "../components/footer";
-@import "../components/results";
-@import "../components/anchor";
+@import "../components/background";
 @import "../components/button";
 @import "../components/card";
-@import "../components/content";
-@import "../components/section";
+@import "../components/footer";
 @import "../components/icon";
+@import "../components/result";
+@import "../components/section";
+@import "../components/splash";
