--- a/views/landing.gohtml
+++ b/views/landing.gohtml
@@ -1,6 +1,6 @@
 {{define "page"}}
     {{template "splash" .}}
-    <main class="content">
+    <main class="background">
         {{template "features"}}
         {{template "procedure"}}
         {{template "cta" .}}
