--- a/views/layouts/resultHeader.gohtml
+++ b/views/layouts/resultHeader.gohtml
@@ -1,5 +1,5 @@
 {{define "resultHeader"}}
-    <h1 class="results__header is-family-secondary has-text-weight-light has-text-grey-darker is-size-1-mobile">
+    <h1 class="result__header is-family-secondary has-text-weight-light has-text-grey-darker is-size-1-mobile">
         {{.}}
     </h1>
 {{end}}
