Implement error page

--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -25,6 +25,7 @@
 @import "../components/background";
 @import "../components/button";
 @import "../components/card";
+@import "../components/error";
 @import "../components/footer";
 @import "../components/icon";
 @import "../components/result";
