Rephrase procedure copy

--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -21,7 +21,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Connect to Spotify"}}
-                            {{template "cardCopy" "Clicking on the Connect button will redirect you to Spotify. You may be asked to enter your credentials and look over the requested data. If you accept, Discover Now will handle the rest."}}
+                            {{template "cardCopy" "The connect button will redirect you to Spotify where you may be asked to log in. You will be shown a list of permissions we are requesting. Review them carefully before continuing and Discover Now will handle the rest."}}
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Analyze your interests"}}
-                            {{template "cardCopy" "Our algorithm will analyze your listening habits and generate your personalized playlist. We'll find tracks from artists you would appreciate but have yet to fully connect with."}}
+                            {{template "cardCopy" "Our algorithm will analyze your latest listening habits and generate your personalized playlist. We'll add music you'll appreciate while avoiding tracks and artists you're already familiar with. This step may take a few seconds to complete."}}
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Discover new music"}}
-                            {{template "cardCopy" "Your Discover Now playlist will be added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again after listening to more music."}}
+                            {{template "cardCopy" "Your Discover Now playlist will be added to your Spotify profile. It will have a unique name like \"Bilingual-Aardvark\". All that's left is to enjoy your new discovery. If we miss our mark, you can always try again after listening to more music."}}
                         </div>
                     </div>
                 </div>
